@@ -1,6 +1,12 @@
 Pygments changelog
 ==================
 
+Version 0.X
+-----------
+
+- Fixed a bug in the D and MiniD lexers.
+
+
 Version 0.8
 -----------
 (codename Maikäfer, released May 30, 2007)
